# python-project-52

./: .env  .gitignore  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: unittests_and_linter.yml
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/fixtures/: test_labels.json  test_statuses.json  test_tasks.json  test_users.json
task_manager/labels/: forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/labels/tests/: test_case.py  test_form.py  test_model.py  test_view.py
task_manager/statuses/: forms.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/statuses/tests/: test_case.py  test_form.py  test_model.py  test_view.py
task_manager/tasks/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_task_label.py  0003_alter_task_label.py  0004_alter_task_table.py  0005_alter_task_label.py
task_manager/tasks/tests/: test_case.py  test_form.py  test_model.py  test_view.py
task_manager/templates/: delete_form.html  footer.html  form.html  index.html  layout.html  login.html  navbar.html
task_manager/templates/labels/: label_create.html  label_delete.html  labels_list.html
task_manager/templates/statuses/: status_create.html  status_delete.html  statuses_list.html
task_manager/templates/tasks/: task_delete.html  task_detail.html  tasks_create.html  tasks_list.html
task_manager/templates/users/: users.html  (+4 more)
task_manager/users/: forms.py  models.py  urls.py  views.py
(+7 files in other folders)
