[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "django>=5.1.4",
    "django-bootstrap5>=24.3",
    "gunicorn>=23.0.0",
]

[tool.hatch.build.targets.sdist]
include = ["task_manager"]  

[tool.hatch.build.targets.wheel]
include = ["task_manager"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
